--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
         <title>
             Athena Yim
         </title>
+
+        <style>
+            .title-banner {
+                background-color: lightpink;
+                text-align: center;
+                padding: 10px;
+                margin: 20px;
+            }
+
+            .title-banner > h1 {
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                color: mediumvioletred;
+                font-size: 40px;
+            }
+
+            .paragraph {
+                background-color: peachpuff;
+                padding: 10px;
+                margin: 20px;
+                font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            }
+
+        </style>
     </head>
-    <body>
-        <h1>Welcome!</h1>
+    <body style="background-color: lightyellow;">
+        <div class="title-banner">
+            <h1>Welcome to my page!</h1>
+        </div>
+        <div class="paragraph">
+            Hello there!
+        </div>
     </body>
 </html>
